# 3DMesher

./: CMakeLists.txt  DelaunayTetMeshMain.cpp  DelaunayTetMeshMain_Hex.cpp  DelaunayTetMeshMain_Hex_External_Facet.cpp  Get_Resolution_and_dimension.cpp  HausdorffDistanceCalculatorMain.cpp  HausdorffDistanceCalculatorMain_stl.cpp  README.md  STL_reader3.h  SchneidersHexMeshMain.cpp  UnivaqHexMeshMain.cpp  UnivaqHexMeshMain2.cpp  UnivaqHexMesh_External_Facet_Finder_Main.cpp  main.cpp  mainWriteExternalFacet.cpp  mainWriteStatistics.cpp  main_getBBox.cpp  main_gmsh.cpp
3DMesher_lib/: Bad_hex_finder.cpp  Bad_hex_finder.h  Block_maker.cpp  Block_maker.h  Block_refiner.cpp  Block_refiner.h  CMakeLists.txt  Degenerate_element_finder.cpp  Degenerate_element_finder.h  DelaunayCGALTetMeshAlgorithm.cpp  DelaunayCGALTetMeshAlgorithm.h  External_and_onBoundary_remover.cpp  External_and_onBoundary_remover.h  External_block_remover.cpp  External_block_remover.h  External_facet_finder.cpp  External_facet_finder.h  Features_detector.cpp  Features_detector.h  Grid_boundary_connector.cpp  Grid_boundary_connector.h  Grid_maker.cpp  Grid_maker.h  HexMesh_from_TetMesh_maker.cpp  HexMesh_from_TetMesh_maker.h  Hexahedron_fitter.cpp  Hexahedron_fitter.h  InitialMesh_boundary_connector.cpp  InitialMesh_boundary_connector.h  Initial_mesh_maker.h  Intersecting_polyhedron_finder.cpp  Intersecting_polyhedron_finder.h  L_facet_detector.cpp  L_facet_detector.h  More_external_block_finder.cpp  More_external_block_finder.h  MyLCC.h  OFF_Reader.cpp  OFF_Reader.h  OnBoundary_block_remover.cpp  (+27 more)
3DMesher_lib/3D_hex_mesh_algorithms/: CMakeLists.txt  Hex_dom_salome_mesh.cpp  Hex_dom_salome_mesh.h  hex_dom_gmsh_mesh.cpp  hex_dom_gmsh_mesh.h
3DModels/: Hexagonal_prism.stl  Inductor_SMD_Shielded.stl  T0247_4pins.stl  bluetooth_RN41.stl  bolt.stl  cube.stl  cube_carved.stl  cylinder.stl  mech_piece.stl  power_module.stl  sphere.stl  torque.stl  wave.stl
Catch_tests/: Bad_hex_finder_tests.cpp  Block_maker_tests.cpp  Block_refiner_tests.cpp  Block_repairer_tests.cpp  CMakeLists.txt  Degenerate_element_finder_tests.cpp  Evaluator_tests.cpp  External_block_remover_tests.cpp  External_facet_finder_tests.cpp  Features_detector_tests.cpp  Grid_boundary_connector_tests.cpp  Grid_maker_tests.cpp  Hexahedron_fitter_tests.cpp  InitialMesh_boundary_connector_tests.cpp  Initial_mesh_maker_tests.cpp  Intersecting_polyhedron_finder_tests.cpp  L_facet_detector_tests.cpp  MeditReader_tests.cpp  More_external_block_finder_tests.cpp  OFFReader_tests.cpp  OnBoundary_block_remover_tests.cpp  PointNormal_boundary_intersectionPoint_finder_tests.cpp  Point_normal_finder_tests.cpp  Point_sorter_tests.cpp  Reader_tests.cpp  STLReader_tests.cpp  VTK_manager_tests.cpp  Vertex_location_finder_tests.cpp  Writer_tests.cpp  test_config.h.in
Catch_tests/Data/: cube.mesh  cube10.off  cubeIntersecting.off  cubeTest.stl  cubeTest2.off  cubeTest3.off  cubeTest4.off  cubeTest5.off  cubeTest6.off  cube_with_more_than_12_triangles.stl  empty.mesh  hexTest.off  hexTest2.off  one_folded_hex.vtk  one_hex.vtk  parallelepipedTest.off  pyramid.off  pyramid.stl  sphere.mesh  sphere.off  sphere_snappy.vtk  trapezoidTest.off
DataInput/: DIP8SMD.stl  T0247_4pins.stl  bone.stl  cube_carved.stl  hinge.stl  joint.stl  torque.stl  wrench.stl
Evaluator_lib/: CMakeLists.txt  Evaluator.cpp  Evaluator.h  MeditReader.cpp  MeditReader.h
Include/: catch.hpp
MeshOutput/: cubeIntersectingL_TEST.mesh  cubeIntersectingTEST.mesh  parallelepipedTest_U_facet_detector_Mesh.mesh  singleHex.mesh  singleHex2.mesh  trapezoidTest_L_facet_detector.mesh  trapezoidTest_L_facet_detector_Mesh.mesh  trapezoidTest_L_facet_detector_initMesh.mesh
MeshOutput/GmshHexMeshOutput/: bolt_gmsh.vtk  bunny_gmsh.vtk  cube100x100axisAligned_gmsh.vtk  sfera_gmsh.vtk
MeshOutput/SchneidersHexMeshOutput/: boltMesh.mesh  bolt_R8_Mesh.mesh  bunnyMesh.mesh  bunny_R8_Mesh.mesh  cube100x100axisAligned.mesh  cube100x100axisAligned3.mesh  cube100x100axisAligned_R8_Mesh.mesh  cube100x100rotated.mesh  cube100x100rotated2.mesh  cube100x100rotated3.mesh  cube100x100rotated4.mesh  cube100x100rotatedInitMesh.mesh  cube100x100rotatedMesh.mesh  cube100x100rotated_R8_Mesh.mesh  cube100x100rotated_senzaCornetti.mesh  cube100x100rotated_senzaCornetti_2normals.mesh  ellipse_R8_Mesh.mesh  rotatedTrapezoid_R8_Mesh.mesh  sphere.mesh  sphereMesh.mesh  sphere_R8_Mesh.mesh
MeshOutput/UnivaqHexMeshOutput/: Tronco_cono_3D_8Res.mesh  bolt_8Res.mesh  bunny_24Res.mesh  bunny_8Res.mesh  cube100x100axisAligned_8Res.mesh  cube100x100rotated.mesh  cube100x100rotated_24Res.mesh  ellipse_8Res.mesh  rotatedTrapezoid_24Res.mesh  sfera_8Res.mesh  sphere_24Res.mesh
docs_doxygen/: Doxyfile.in
docs_sphinx/: Doxyfile.in  conf.py  index.rst
docs_sphinx/_build/doctrees/: environment.pickle  index.doctree
docs_sphinx/_build/doctrees/api/: 3DMesher.doctree  index.doctree
docs_sphinx/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  sitemap.xml
docs_sphinx/_build/html/_sources/: index.rst.txt
docs_sphinx/_build/html/api/: 3DMesher.html  index.html
docs_sphinx/api/: 3DMesher.rst  Bad_hex_finder.rst  Block_maker.rst  Block_refiner.rst  Degenerate_element_finder.rst  DelaunayCGALTetMeshAlgorithm.rst  External_and_onBoundary_remover.rst  External_block_remover.rst  External_facet_finder.rst  Features_detector.rst  Grid_Maker.rst  Grid_boundary_connector.rst  HexMesh_from_TetMesh_maker.rst  InitialMesh_boundary_connector.rst  Initial_mesh_maker.rst  Intersecting_polyhedron_finder.rst  L_facet_detector.rst  More_external_block_finder.rst  MyLCC.rst  OFF_Reader.rst  OnBoundary_block_remover.rst  PointNormal_boundary_intersectionPoint_finder.rst  Point_normal_finder.rst  Point_sorter.rst  UnivaqHexMeshAlgorithm.rst  UnivaqSplitFromTetAlgorithm.rst  VTK_manager.rst  Vertex_location_finder.rst  Volume_Validator.rst  Writer.rst
docs_sphinx/“_build”/html/: index.html
docs_sphinx/“_build”/latex/: refman.tex
docs_sphinx/“_build”/xml/: index.xml
