#project(3DMesher)
#
#set(HEADER_FILES
#        hex_dom_gmsh_mesh.h
#        )
#
#set(SOURCE_FILES
#        hex_dom_gmsh_mesh.cpp
#        )
#
## You get to pick a type of library, STATIC, SHARED, or MODULE. If you leave this choice off, the value of BUILD_SHARED_LIBS will be used to pick between STATIC and SHARED.
#add_library(3D_hex_mesh_algorithms ${SOURCE_FILES} ${HEADER_FILES})

